[gd_scene load_steps=10 format=3 uid="uid://dvqu81j65chtr"]

[ext_resource type="Script" path="res://car/car.gd" id="1_caus5"]
[ext_resource type="Script" path="res://engine_sound.gd" id="2_460mh"]
[ext_resource type="PackedScene" uid="uid://4arryn46ujiy" path="res://car/components/engine.tscn" id="2_y3xmu"]
[ext_resource type="PackedScene" uid="uid://dk16tskqr0vgm" path="res://car/components/differential.tscn" id="3_nloo5"]
[ext_resource type="PackedScene" uid="uid://dc2gw6s50pxur" path="res://car/components/transmission.tscn" id="3_rkp0x"]
[ext_resource type="PackedScene" uid="uid://c5pjveyc6065i" path="res://car/components/running_gear.tscn" id="4_6b27f"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6kj2t"]
friction = 0.0

[sub_resource type="Curve" id="Curve_gkkdu"]
_data = [Vector2(0, 0.790322), 0.0, 0.0, 0, 0, Vector2(0.74, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.870624), -0.871734, 0.0, 0, 0]
point_count = 3

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_2vce4"]
buffer_length = 0.05

[node name="Car" type="RigidBody3D" node_paths=PackedStringArray("running_gear", "engine", "transmission", "differential")]
collision_layer = 2
collision_mask = 3
mass = 800.0
physics_material_override = SubResource("PhysicsMaterial_6kj2t")
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.5, 0)
inertia = Vector3(600, 600, 600)
can_sleep = false
contact_monitor = true
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("1_caus5")
running_gear = NodePath("RunningGear")
engine = NodePath("Engine")
transmission = NodePath("Transmission")
differential = NodePath("Differential")

[node name="Engine" parent="." instance=ExtResource("2_y3xmu")]
torque_curve = SubResource("Curve_gkkdu")

[node name="Transmission" parent="." instance=ExtResource("3_rkp0x")]

[node name="Differential" parent="." instance=ExtResource("3_nloo5")]

[node name="RunningGear" parent="." instance=ExtResource("4_6b27f")]
longitudinal_friction_coefficient = 1.5
lateral_friction_coefficient = 1.5

[node name="BodyCollision" type="CollisionPolygon3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
depth = 2.0
polygon = PackedVector2Array(1.5, 0, 2.5, 0.2, 2.5, 1, -2.5, 0.5, -2.5, 0.2, -1.5, 0)

[node name="CockpitCollision" type="CollisionPolygon3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
depth = 3.0
polygon = PackedVector2Array(0.5, 0.2, -0.5, 0.2, -0.2, 1, 0.2, 1)

[node name="BumperCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -2)

[node name="FollowCameraPivot" type="Node3D" parent="."]

[node name="FollowCamera" type="Camera3D" parent="FollowCameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 6)
current = true

[node name="FollowCameraReset" type="Timer" parent="."]
one_shot = true

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 1)
stream = SubResource("AudioStreamGenerator_2vce4")
autoplay = true
script = ExtResource("2_460mh")

[connection signal="timeout" from="FollowCameraReset" to="." method="_on_follow_camera_reset_timeout"]
